# remote-pydantic-settings

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
example/: main.py
src/: main.py
src/remote_pydantic_settings/: __init__.py  main.py
